test/classes/initializers/generics/phase1/reuse-field-accessor.good
reuse-field-accessor.chpl:11: In initializer:
reuse-field-accessor.chpl:13: error: cannot call field-accessor method "x" before this.complete()
